<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".HomeScreen">

    <ImageView
        android:id="@+id/routeLogo"
        android:layout_width="117dp"
        android:layout_height="39dp"
        android:contentDescription="@string/routelogo"
        android:scaleType="fitStart"
        android:src="@drawable/route"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <ImageView
        android:id="@+id/gifImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="150dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/gifimageview"
        app:layout_constraintTop_toBottomOf="@id/routeLogo" />

    <TextView
        android:id="@+id/noContactsTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:fontFamily="@font/inter"
        android:paddingHorizontal="2dp"
        android:text="@string/there_is_no_contacts_added_here"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/gifImageView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButtonEmptyPage"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/textColor"
        android:fontFamily="sans-serif-light"
        android:text="@string/button"
        android:textColor="@color/background"
        android:textSize="32sp"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"

        />


</androidx.constraintlayout.widget.ConstraintLayout>