<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="24dp"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/textColor"
        android:layout_margin="16dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textColor"
            android:padding="4dp"

            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteButton"
                android:layout_width="37dp"
                android:layout_height="40dp"
                android:backgroundTint="#FF0000"
                app:icon="@drawable/delete"
                app:iconGravity="top"
                app:iconTint="@color/textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="90dp"
                android:text="@string/leo_messi"
                android:textColor="@color/background"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/deleteButton"

                />

            <ImageView
                android:id="@+id/emailIC"
                android:layout_width="20dp"
                android:layout_height="16dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/emailic"
                android:src="@drawable/mail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userName"

                />

            <TextView
                android:id="@+id/emailText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/leomessi_route_gmail_com"
                android:textColor="@color/background"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/emailIC"
                app:layout_constraintTop_toTopOf="@id/emailIC" />

            <ImageView
                android:id="@+id/phoneIC"
                android:layout_width="20dp"
                android:layout_height="16dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="15dp"
                android:contentDescription="@string/phoneic"
                android:src="@drawable/phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailIC"

                />

            <TextView
                android:id="@+id/phoneText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/_2000000000"
                android:textColor="@color/background"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/phoneIC"
                app:layout_constraintTop_toTopOf="@id/phoneIC" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>